# bernie-studio

./: .gitattributes  .gitignore  Bernie Studio.bat  LICENSE  README.md  keys.example.env  make.py  pyproject.toml  requirements.txt  run.bat  setup.ps1
bernie/: __init__.py  agency.py  agents.py  assemble.py  backup.py  characters.py  comfy.py  config.py  direct_episode.py  director.py  director_revise.py  director_visual.py  doctor.py  episode2.py  gui.py  interp.py  lipsync.py  lora_dataset.py  lora_train.py  monitor.py  music.py  music_gen.py  pipeline.py  presets.py  qc.py  series.py  showrunner.py  voices.py  workflows.py
bernie/core/: __init__.py  events.py  state.py
bernie/web/: index.html
configs/: README.md
configs/characters/: bernie.json
configs/series/: season_1.json
configs/voices/: bernie.json
docs/: ARCHITECTURE_AND_ROADMAP.md  PRODUCTION_READINESS.md
tests/: __init__.py  conftest.py  test_core.py  test_levers.py  test_pipeline_safe.py
